RESOLVED FIXED 250627
<object> element shouldn't override FormListedElement::setCustomValidity()
https://bugs.webkit.org/show_bug.cgi?id=250627
Summary <object> element shouldn't override FormListedElement::setCustomValidity()
Attachments
Alexey Shvayka
Comment 1 2023-01-14 16:59:23 PST
EWS
Comment 2 2023-01-16 03:18:02 PST
Committed 258945@main (189024a1815a): <https://commits.webkit.org/258945@main> Reviewed commits have been landed. Closing PR #8662 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-01-16 03:19:20 PST
Note You need to log in before you can comment on or make changes to this bug.