<object> element shouldn't override FormListedElement::setCustomValidity() https://bugs.webkit.org/show_bug.cgi?id=250627

Reviewed by Darin Adler.

Per spec [1], <object> element's constraint validation methods are the same as for other objects.

This change removes setCustomValidity() override, allowing <object> element's customError()
to be triggered, which aligns <object> with all the other elements: their validity states
are independent of willValidate().

Removal of validationMessage() override is non-observable: the message can't be retrieved for
an element that is not a candidate for constraint validation [2].

Aligns WebKit with the spec and Gecko.

[1] https://html.spec.whatwg.org/multipage/iframe-embed-object.html#the-object-element:the-constraint-validation-api
[2] https://html.spec.whatwg.org/multipage/form-control-infrastructure.html#dom-cva-validationmessage

* LayoutTests/fast/forms/setCustomValidity-null-parameter.html:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/embedded-content/the-object-element/object-setcustomvalidity-expected.txt:
* Source/WebCore/html/HTMLObjectElement.h:

Canonical link: https://commits.webkit.org/258945@main